[LINTING] Added errorprone
Errorprone checks at compile time, so it does not need the -Dlint profile